get place in server
